redhat/rhoai/v3.5/base/05-mcp-connect/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-mcp-gateway-access
  namespace: ocp-mcp-server
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: mcp-gateway-system
    - group: mcp.kuadrant.io
      kind: MCPServerRegistration
      namespace: ocp-mcp-server
  to:
    - group: ""
      kind: Service
