redhat/rhoai/v3.5/base/05-mcp-connect/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openshift-mcp-server-route
  namespace: ocp-mcp-server
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: mcp-gateway
      namespace: mcp-system
      sectionName: mcps
  hostnames:
    - "openshift-mcp.mcp.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: openshift-mcp-server
          port: 8080
